# groundForceReaction

./: .gitignore  README.md
contactForces4/examples/: block_drag.osim  block_drag_states.sto  setup.xml
contactForces4/examples/geometry/: big_block_centered.vtp
contactForces4/examples/results/: block_drag_ContactForceAnalysis_controls.sto  block_drag_ContactForceAnalysis_externalForces.sto  block_drag_ContactForceAnalysis_externalForces.xml  block_drag_ContactForceAnalysis_externalForces_aggregated.sto  block_drag_ContactForceAnalysis_forces.sto
contactForces4/src/: CMakeLists.txt  ContactForceAnalysis.cpp  ContactForceAnalysis.h  ContactForceAnalysisTarget.cpp  ContactForceAnalysisTarget.h  ContactPointOnPlane.cpp  ContactPointOnPlane.h  osimPluginDLL.h  osimRegisterTypes.cpp  osimRegisterTypes.h
src/: setup.xml
src/contact_optimization/models/: model_generic_initial.osim
src/contact_optimization/motions/: task_InverseKinematics.mot
src/dflow_method/data/: data_body.csv  data_marker.csv
src/dflow_method/inverse_dynamics/: left_NewDataSource_TransformedP.sto  right_NewDataSource_TransformedP.sto  setup_id.xml  setup_id.xml~  task_InverseDynamics.sto
src/dflow_method/inverse_kinematics/: ik_model_marker_locations.sto  task_InverseKinematics.mot  task_ik_marker_errors.sto  task_ik_model_marker_locations.sto
src/dflow_method/model/: Geometry
src/dflow_method/results/: exp_task_InverseDynamics.sto  groundtruth_task_InverseDynamics.sto  (+6 more)
src/models/: model_generic.osim  model_generic_initial.osim  reserve_actuators.xml
src/results/: inverse_dynamics.sto
(+16 files in other folders)
